--- a/navbar.css
+++ b/navbar.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-      background-color: transparent;
+    background-color: #000;
     margin: 0;
 }
 
@@ -49,7 +49,7 @@
       top: 15vh;
       right: 0px;
       text-align: center;
-      background-color: transparent;
+      background-color: #000;
       z-index: 1000;
       transition: .6s;
       visibility: hidden;
@@ -79,7 +79,7 @@
     }
 
     #menu a:hover {
-      background-color: #353E06;
+      background-color: #7A2587;
       font-size: 1.3rem;
     }
     #nav.active #menu::-webkit-scrollbar {
