--- a/style.css
+++ b/style.css
@@ -7,26 +7,55 @@ body {
   background-color: #000;
 }
 
+a {
+    text-decoration: none;
+}
+
 h1, span {
   font-family: "Squada One", sans-serif;
   font-weight: 400;
   font-style: normal;
   color: white;
 }
+ .font-primary {
+    font-family: "Squada One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+ }
+
+ .font-secondary {
+    font-family: "Sansation", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+ }
 .container-geral {
     background-color: #000;
     height: (100vh - 15vh);
 }
 
 .img-adapter{
-    margin-top: -75px;
-  width: auto;           /* ou outra medida */
+margin-top: auto;
+  width: auto;          
   max-width:100dvw;   
   height: 350px;  
   overflow:hidden;      
 }
 
 .img-adapter img{
+  width:100%;           
+  height:100%;        
+  object-fit:cover;     
+  display:block;        
+}
+.img-produto{
+    margin-top: auto;
+  width: auto;          
+  max-width:100dvw;   
+  height: 200px;  
+  overflow:hidden;      
+}
+
+.img-produto img{
   width:100%;           
   height:100%;        
   object-fit:cover;     
@@ -64,6 +93,10 @@ h1, span {
 .text-black {
     color: black;
 }
+.text-white {
+    color: rgb(255, 255, 255);
+}
+
 .nome-button {
     font-size:2rem;
     letter-spacing: 1px;
@@ -84,33 +117,67 @@ h1, span {
     background-color: #7A2587; 
     border-radius: 5px;
     padding: 5px 5px;
+    height: 65px;
+}
+.description-button {
+    color: rgba(255, 255, 255, 0.836);
+    font-size: 0.9rem;
+    font-family: "Sansation", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: 1px;
 }
 .mx-auto {
     margin: 0 auto;
 }
-
-@keyframes button {
-  from {background-color: red;}
-  to {background-color: yellow;}
+section {
+    height: calc(100vh - 10dvh);
+}
+.em-5-style {
+    background-color: #D59234;
+    color: white;
+    border: 2px solid #D59234;
+}
+.jlf-style {
+    background-color: #A73DB7;
+    color: white;
+    border: 2px solid #62106f;
 }
 
-/* The element to apply the animation to */
-.butaao{
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  animation-name: example;
-  animation-duration: 4s;
+.description-produto {
+    font-size: 1.5rem;
+    padding: 5px 10%;
+    letter-spacing: 0.3px;
+    font-size: 1.3rem;
+    font-family: "Sansation", sans-serif;
+    font-weight: 300;
+    line-height: 1.8rem;
 }
+.destaque-description-produto {
+    font-size: 1.5rem;
+}
+
+.button-comprar {
+    height: 50px; 
+    background-color: rgb(255, 217, 0);
+    border: 2px solid #6b5b00;
+
+}
+
+.button-duvida {
+    height: 50px; 
+    background-color: #00ff37;
+}
+
+
 
 .botoes-fixos {
-    position: fixed;          /* Fixa na tela */
-    bottom: 20px;            /* 20px da borda inferior */
+    position: fixed;       
+    bottom: 0px;            
     left: 0;
     right: 0;
-    display: flex;           /* Mantém o flex */
-    justify-content: center; /* Centraliza os botões */
-    gap: 20px;               /* Espaçamento entre botões */
-    padding: 0 20px;         /* Respiro lateral */
-    z-index: 1000;           /* Mantém acima dos outros elementos */
+    display: flex;           
+    justify-content: center; 
+    gap: 20px;               
+    padding: 0 5px;        
 }
